--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,33 +1,33 @@
+// 1. Load Angular Material (Must be first!)
 @use '@angular/material' as mat;
+
+// 2. Load Tailwind (Must come after @use)
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-// Material Theme
-@include mat.theme((
-  color: (
-    primary: mat.$azure-palette,
-    tertiary: mat.$blue-palette,
-  ),
-  typography: Roboto,
-  density: 0,
-));
-
-// Global Styles
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+// 3. Define the theme
+html {
+  @include mat.theme((
+    color: (
+      primary: mat.$azure-palette,
+      tertiary: mat.$blue-palette,
+    ),
+    typography: Roboto,
+    density: 0,
+  ));
 }
 
+// 4. Global application styles
 body {
+  color-scheme: light;
+  background-color: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
+  font: var(--mat-sys-body-medium);
+  margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #f9fafb;
-  color: #1f2937;
-  direction: rtl;
-  text-align: right;
 }
 
-html, body {
-  height: 100%;
+html, body { 
+  height: 100%; 
 }
